Refactor Neo4jDirectoryRepository to use getFirst() for record retrieval